// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docs/rules/empty-heading.md inline validation: correct 1`] = `Array []`;

exports[`docs/rules/empty-heading.md inline validation: incorrect 1`] = `
Array [
  Object {
    "errorCount": 2,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 1,
        "message": "<h1> cannot be empty, must have text content",
        "offset": 1,
        "ruleId": "empty-heading",
        "selector": "h1",
        "severity": 2,
        "size": 2,
      },
      Object {
        "column": 2,
        "context": undefined,
        "line": 2,
        "message": "<h2> cannot be empty, must have text content",
        "offset": 11,
        "ruleId": "empty-heading",
        "selector": "h2",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<h1></h1>
<h2><span></span></h2>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/empty-heading.md inline validation: whitespace 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 1,
        "message": "<h1> cannot be empty, must have text content",
        "offset": 1,
        "ruleId": "empty-heading",
        "selector": "h1",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<h1> </h1>",
    "warningCount": 0,
  },
]
`;
